# user_services

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
bot/: exceptions.py  handlers.py  keyboards.py  main.py
bot/database/: config.py  repository.py
docker/: Dockerfile.app  Dockerfile.bot
user_services/core/: settings.py  urls.py  wsgi.py
user_services/products/: apps.py  middleware.py  models.py  permission.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
user_services/products/migrations/: 0001_initial.py  0002_product.py  0003_order_items_alter_order_email_alter_order_first_name_and_more.py  0004_remove_product_available_remove_product_created_and_more.py  0005_remove_order_items_orderitem.py  0006_remove_order_products_or_created_4e5fd7_idx_and_more.py
user_services/subscriptions/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
user_services/subscriptions/migrations/: 0001_initial.py  0002_remove_tariff_price_tariff_longevity_in_days_and_more.py  0002_tariff_duration_in_days_usersubscription_end_date_and_more.py  0003_alter_usersubscription_end_date.py  0003_alter_usersubscription_user.py  0004_alter_usersubscription_end_date.py  0004_alter_usersubscription_user.py  0005_rename_longevity_in_days_tariff_duration_in_days_and_more.py  0006_remove_usersubscription_price_tariff_price.py
user_services/users/: manager.py  models.py  serializers.py
user_services/users/migrations/: 0001_initial.py  0002_customuser_telegram_id.py  0003_rename_telegram_id_customuser_telegram_chat_id.py
