[project]
name = "userservices"
version = "0.1.0"
description = ""
authors = [
    {name = "dilozy",email = "denfil228@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.11"
django = ">=5.2.2,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
psycopg = { version = ">=3.2.9,<4.0.0", extras = ["binary"] }
django-extensions = ">=4.1,<5.0"
celery = { version = ">=5.5.3,<6.0.0", extras = ["rabbitmq"] }
python-dotenv = ">=1.1.0,<2.0.0"
model-bakery = ">=1.20.5,<2.0.0"
requests = "^2.32.4"
django-cachalot = "^2.8.0"
django-redis = "^5.4.0"

# Группа для бота
[tool.poetry.group.bot.dependencies]
aiogram = "^3.20.0.post0"
asyncpg = "^0.30.0"
python = ">=3.11"
sqlalchemy = ">=2.0.41,<3.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
